parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> LBRACE sentencias RBRACE
Rule 2     sentencias -> <empty>
Rule 3     sentencias -> sentencias sentencia
Rule 4     sentencia -> declaracion
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> funcion
Rule 7     sentencia -> estructura_control
Rule 8     sentencia -> kw_clg
Rule 9     sentencia -> expresion
Rule 10    sentencia -> retorno
Rule 11    retorno -> RETURN expresion SEMI
Rule 12    retorno_opcional -> COLON tipo
Rule 13    retorno_opcional -> empty
Rule 14    tipo_obligatorio -> KW_ENT
Rule 15    tipo_obligatorio -> KW_FLT
Rule 16    tipo_obligatorio -> KW_LG
Rule 17    tipo_obligatorio -> KW_STR
Rule 18    funcion -> FCT ID LPAREN parametros RPAREN retorno_opcional LBRACE sentencias RBRACE
Rule 19    parametros -> parametro
Rule 20    parametros -> parametro COMMA parametros
Rule 21    parametro -> tipo_obligatorio ID
Rule 22    declaracion -> KW_UNMUTABLE tipo_obligatorio ID ASSIGN expresion SEMI
Rule 23    declaracion -> tipo_obligatorio ID ASSIGN expresion SEMI
Rule 24    declaracion -> KW_UNMUTABLE tipo_obligatorio ID SEMI
Rule 25    declaracion -> tipo_obligatorio ID SEMI
Rule 26    asignacion -> ID ASSIGN expresion SEMI
Rule 27    expresion -> operacion_aritmetica SEMI
Rule 28    expresion -> llamada_funcion SEMI
Rule 29    expresion -> SCN SEMI
Rule 30    expresion -> retorno
Rule 31    operacion_aritmetica -> termino
Rule 32    operacion_aritmetica -> operacion_aritmetica PLUS termino
Rule 33    operacion_aritmetica -> operacion_aritmetica MINUS termino
Rule 34    termino -> factor
Rule 35    termino -> termino MULTIPLY factor
Rule 36    termino -> termino DIVIDE factor
Rule 37    factor -> NUMBER
Rule 38    factor -> ID
Rule 39    factor -> LPAREN operacion_aritmetica RPAREN
Rule 40    factor -> llamada_funcion
Rule 41    factor -> MINUS factor
Rule 42    llamada_funcion -> ID LPAREN argumentos RPAREN
Rule 43    argumentos -> expresion
Rule 44    argumentos -> argumentos COMMA expresion
Rule 45    estructura_control -> estructura_if
Rule 46    estructura_control -> ciclo_for
Rule 47    estructura_control -> ciclo_while
Rule 48    estructura_if -> IF LPAREN expresion_logica RPAREN LBRACE sentencias RBRACE else_opcional
Rule 49    else_opcional -> ELSE LBRACE sentencias RBRACE
Rule 50    else_opcional -> empty
Rule 51    expresion_logica -> expresion operadores_comparacion expresion
Rule 52    operadores_comparacion -> LT
Rule 53    operadores_comparacion -> GT
Rule 54    operadores_comparacion -> EQ
Rule 55    operadores_comparacion -> NE
Rule 56    operadores_comparacion -> LE
Rule 57    operadores_comparacion -> GE
Rule 58    ciclo_for -> FOR LPAREN declaracion SEMI expresion_logica SEMI asignacion RPAREN LBRACE sentencias RBRACE
Rule 59    ciclo_while -> WHILE LPAREN expresion_logica RPAREN LBRACE sentencias RBRACE
Rule 60    kw_clg -> CLG LPAREN string_content RPAREN SEMI
Rule 61    string_content -> string_literal
Rule 62    string_content -> ID
Rule 63    string_literal -> STRING_START string_parts STRING_END
Rule 64    string_parts -> <empty>
Rule 65    string_parts -> STRING_TEXT
Rule 66    string_parts -> STRING_VAR
Rule 67    string_parts -> string_parts STRING_TEXT
Rule 68    string_parts -> string_parts STRING_VAR
Rule 69    tipo -> tipo_obligatorio
Rule 70    tipo -> empty
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 22 23 26
CLG                  : 60
COLON                : 12
COMMA                : 20 44
DIVIDE               : 36
ELSE                 : 49
EQ                   : 54
FCT                  : 18
FOR                  : 58
GE                   : 57
GT                   : 53
ID                   : 18 21 22 23 24 25 26 38 42 62
IF                   : 48
KW_ENT               : 14
KW_FLT               : 15
KW_LG                : 16
KW_STR               : 17
KW_UNMUTABLE         : 22 24
LBRACE               : 1 18 48 49 58 59
LE                   : 56
LPAREN               : 18 39 42 48 58 59 60
LT                   : 52
MINUS                : 33 41
MULTIPLY             : 35
NE                   : 55
NUMBER               : 37
PLUS                 : 32
RBRACE               : 1 18 48 49 58 59
RETURN               : 11
RPAREN               : 18 39 42 48 58 59 60
SCN                  : 29
SEMI                 : 11 22 23 24 25 26 27 28 29 58 58 60
STRING_END           : 63
STRING_START         : 63
STRING_TEXT          : 65 67
STRING_VAR           : 66 68
WHILE                : 59
error                : 

Nonterminals, with rules where they appear

argumentos           : 42 44
asignacion           : 5 58
ciclo_for            : 46
ciclo_while          : 47
declaracion          : 4 58
else_opcional        : 48
empty                : 13 50 70
estructura_control   : 7
estructura_if        : 45
expresion            : 9 11 22 23 26 43 44 51 51
expresion_logica     : 48 58 59
factor               : 34 35 36 41
funcion              : 6
kw_clg               : 8
llamada_funcion      : 28 40
operacion_aritmetica : 27 32 33 39
operadores_comparacion : 51
parametro            : 19 20
parametros           : 18 20
programa             : 0
retorno              : 10 30
retorno_opcional     : 18
sentencia            : 3
sentencias           : 1 3 18 48 49 58 59
string_content       : 60
string_literal       : 61
string_parts         : 63 67 68
termino              : 31 32 33 35 36
tipo                 : 12
tipo_obligatorio     : 21 22 23 24 25 69

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . LBRACE sentencias RBRACE

    LBRACE          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> LBRACE . sentencias RBRACE
    (2) sentencias -> .
    (3) sentencias -> . sentencias sentencia

    RBRACE          reduce using rule 2 (sentencias -> .)
    KW_UNMUTABLE    reduce using rule 2 (sentencias -> .)
    ID              reduce using rule 2 (sentencias -> .)
    FCT             reduce using rule 2 (sentencias -> .)
    CLG             reduce using rule 2 (sentencias -> .)
    SCN             reduce using rule 2 (sentencias -> .)
    RETURN          reduce using rule 2 (sentencias -> .)
    KW_ENT          reduce using rule 2 (sentencias -> .)
    KW_FLT          reduce using rule 2 (sentencias -> .)
    KW_LG           reduce using rule 2 (sentencias -> .)
    KW_STR          reduce using rule 2 (sentencias -> .)
    IF              reduce using rule 2 (sentencias -> .)
    FOR             reduce using rule 2 (sentencias -> .)
    WHILE           reduce using rule 2 (sentencias -> .)
    NUMBER          reduce using rule 2 (sentencias -> .)
    LPAREN          reduce using rule 2 (sentencias -> .)
    MINUS           reduce using rule 2 (sentencias -> .)

    sentencias                     shift and go to state 3

state 3

    (1) programa -> LBRACE sentencias . RBRACE
    (3) sentencias -> sentencias . sentencia
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . funcion
    (7) sentencia -> . estructura_control
    (8) sentencia -> . kw_clg
    (9) sentencia -> . expresion
    (10) sentencia -> . retorno
    (22) declaracion -> . KW_UNMUTABLE tipo_obligatorio ID ASSIGN expresion SEMI
    (23) declaracion -> . tipo_obligatorio ID ASSIGN expresion SEMI
    (24) declaracion -> . KW_UNMUTABLE tipo_obligatorio ID SEMI
    (25) declaracion -> . tipo_obligatorio ID SEMI
    (26) asignacion -> . ID ASSIGN expresion SEMI
    (18) funcion -> . FCT ID LPAREN parametros RPAREN retorno_opcional LBRACE sentencias RBRACE
    (45) estructura_control -> . estructura_if
    (46) estructura_control -> . ciclo_for
    (47) estructura_control -> . ciclo_while
    (60) kw_clg -> . CLG LPAREN string_content RPAREN SEMI
    (27) expresion -> . operacion_aritmetica SEMI
    (28) expresion -> . llamada_funcion SEMI
    (29) expresion -> . SCN SEMI
    (30) expresion -> . retorno
    (11) retorno -> . RETURN expresion SEMI
    (14) tipo_obligatorio -> . KW_ENT
    (15) tipo_obligatorio -> . KW_FLT
    (16) tipo_obligatorio -> . KW_LG
    (17) tipo_obligatorio -> . KW_STR
    (48) estructura_if -> . IF LPAREN expresion_logica RPAREN LBRACE sentencias RBRACE else_opcional
    (58) ciclo_for -> . FOR LPAREN declaracion SEMI expresion_logica SEMI asignacion RPAREN LBRACE sentencias RBRACE
    (59) ciclo_while -> . WHILE LPAREN expresion_logica RPAREN LBRACE sentencias RBRACE
    (31) operacion_aritmetica -> . termino
    (32) operacion_aritmetica -> . operacion_aritmetica PLUS termino
    (33) operacion_aritmetica -> . operacion_aritmetica MINUS termino
    (42) llamada_funcion -> . ID LPAREN argumentos RPAREN
    (34) termino -> . factor
    (35) termino -> . termino MULTIPLY factor
    (36) termino -> . termino DIVIDE factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . LPAREN operacion_aritmetica RPAREN
    (40) factor -> . llamada_funcion
    (41) factor -> . MINUS factor

    RBRACE          shift and go to state 4
    KW_UNMUTABLE    shift and go to state 13
    ID              shift and go to state 15
    FCT             shift and go to state 16
    CLG             shift and go to state 21
    SCN             shift and go to state 24
    RETURN          shift and go to state 25
    KW_ENT          shift and go to state 26
    KW_FLT          shift and go to state 27
    KW_LG           shift and go to state 28
    KW_STR          shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    NUMBER          shift and go to state 36
    LPAREN          shift and go to state 17
    MINUS           shift and go to state 34

    sentencia                      shift and go to state 5
    declaracion                    shift and go to state 6
    asignacion                     shift and go to state 7
    funcion                        shift and go to state 8
    estructura_control             shift and go to state 9
    kw_clg                         shift and go to state 10
    expresion                      shift and go to state 11
    retorno                        shift and go to state 12
    tipo_obligatorio               shift and go to state 14
    estructura_if                  shift and go to state 18
    ciclo_for                      shift and go to state 19
    ciclo_while                    shift and go to state 20
    operacion_aritmetica           shift and go to state 22
    llamada_funcion                shift and go to state 23
    termino                        shift and go to state 33
    factor                         shift and go to state 35

state 4

    (1) programa -> LBRACE sentencias RBRACE .

    $end            reduce using rule 1 (programa -> LBRACE sentencias RBRACE .)


state 5

    (3) sentencias -> sentencias sentencia .

    RBRACE          reduce using rule 3 (sentencias -> sentencias sentencia .)
    KW_UNMUTABLE    reduce using rule 3 (sentencias -> sentencias sentencia .)
    ID              reduce using rule 3 (sentencias -> sentencias sentencia .)
    FCT             reduce using rule 3 (sentencias -> sentencias sentencia .)
    CLG             reduce using rule 3 (sentencias -> sentencias sentencia .)
    SCN             reduce using rule 3 (sentencias -> sentencias sentencia .)
    RETURN          reduce using rule 3 (sentencias -> sentencias sentencia .)
    KW_ENT          reduce using rule 3 (sentencias -> sentencias sentencia .)
    KW_FLT          reduce using rule 3 (sentencias -> sentencias sentencia .)
    KW_LG           reduce using rule 3 (sentencias -> sentencias sentencia .)
    KW_STR          reduce using rule 3 (sentencias -> sentencias sentencia .)
    IF              reduce using rule 3 (sentencias -> sentencias sentencia .)
    FOR             reduce using rule 3 (sentencias -> sentencias sentencia .)
    WHILE           reduce using rule 3 (sentencias -> sentencias sentencia .)
    NUMBER          reduce using rule 3 (sentencias -> sentencias sentencia .)
    LPAREN          reduce using rule 3 (sentencias -> sentencias sentencia .)
    MINUS           reduce using rule 3 (sentencias -> sentencias sentencia .)


state 6

    (4) sentencia -> declaracion .

    RBRACE          reduce using rule 4 (sentencia -> declaracion .)
    KW_UNMUTABLE    reduce using rule 4 (sentencia -> declaracion .)
    ID              reduce using rule 4 (sentencia -> declaracion .)
    FCT             reduce using rule 4 (sentencia -> declaracion .)
    CLG             reduce using rule 4 (sentencia -> declaracion .)
    SCN             reduce using rule 4 (sentencia -> declaracion .)
    RETURN          reduce using rule 4 (sentencia -> declaracion .)
    KW_ENT          reduce using rule 4 (sentencia -> declaracion .)
    KW_FLT          reduce using rule 4 (sentencia -> declaracion .)
    KW_LG           reduce using rule 4 (sentencia -> declaracion .)
    KW_STR          reduce using rule 4 (sentencia -> declaracion .)
    IF              reduce using rule 4 (sentencia -> declaracion .)
    FOR             reduce using rule 4 (sentencia -> declaracion .)
    WHILE           reduce using rule 4 (sentencia -> declaracion .)
    NUMBER          reduce using rule 4 (sentencia -> declaracion .)
    LPAREN          reduce using rule 4 (sentencia -> declaracion .)
    MINUS           reduce using rule 4 (sentencia -> declaracion .)


state 7

    (5) sentencia -> asignacion .

    RBRACE          reduce using rule 5 (sentencia -> asignacion .)
    KW_UNMUTABLE    reduce using rule 5 (sentencia -> asignacion .)
    ID              reduce using rule 5 (sentencia -> asignacion .)
    FCT             reduce using rule 5 (sentencia -> asignacion .)
    CLG             reduce using rule 5 (sentencia -> asignacion .)
    SCN             reduce using rule 5 (sentencia -> asignacion .)
    RETURN          reduce using rule 5 (sentencia -> asignacion .)
    KW_ENT          reduce using rule 5 (sentencia -> asignacion .)
    KW_FLT          reduce using rule 5 (sentencia -> asignacion .)
    KW_LG           reduce using rule 5 (sentencia -> asignacion .)
    KW_STR          reduce using rule 5 (sentencia -> asignacion .)
    IF              reduce using rule 5 (sentencia -> asignacion .)
    FOR             reduce using rule 5 (sentencia -> asignacion .)
    WHILE           reduce using rule 5 (sentencia -> asignacion .)
    NUMBER          reduce using rule 5 (sentencia -> asignacion .)
    LPAREN          reduce using rule 5 (sentencia -> asignacion .)
    MINUS           reduce using rule 5 (sentencia -> asignacion .)


state 8

    (6) sentencia -> funcion .

    RBRACE          reduce using rule 6 (sentencia -> funcion .)
    KW_UNMUTABLE    reduce using rule 6 (sentencia -> funcion .)
    ID              reduce using rule 6 (sentencia -> funcion .)
    FCT             reduce using rule 6 (sentencia -> funcion .)
    CLG             reduce using rule 6 (sentencia -> funcion .)
    SCN             reduce using rule 6 (sentencia -> funcion .)
    RETURN          reduce using rule 6 (sentencia -> funcion .)
    KW_ENT          reduce using rule 6 (sentencia -> funcion .)
    KW_FLT          reduce using rule 6 (sentencia -> funcion .)
    KW_LG           reduce using rule 6 (sentencia -> funcion .)
    KW_STR          reduce using rule 6 (sentencia -> funcion .)
    IF              reduce using rule 6 (sentencia -> funcion .)
    FOR             reduce using rule 6 (sentencia -> funcion .)
    WHILE           reduce using rule 6 (sentencia -> funcion .)
    NUMBER          reduce using rule 6 (sentencia -> funcion .)
    LPAREN          reduce using rule 6 (sentencia -> funcion .)
    MINUS           reduce using rule 6 (sentencia -> funcion .)


state 9

    (7) sentencia -> estructura_control .

    RBRACE          reduce using rule 7 (sentencia -> estructura_control .)
    KW_UNMUTABLE    reduce using rule 7 (sentencia -> estructura_control .)
    ID              reduce using rule 7 (sentencia -> estructura_control .)
    FCT             reduce using rule 7 (sentencia -> estructura_control .)
    CLG             reduce using rule 7 (sentencia -> estructura_control .)
    SCN             reduce using rule 7 (sentencia -> estructura_control .)
    RETURN          reduce using rule 7 (sentencia -> estructura_control .)
    KW_ENT          reduce using rule 7 (sentencia -> estructura_control .)
    KW_FLT          reduce using rule 7 (sentencia -> estructura_control .)
    KW_LG           reduce using rule 7 (sentencia -> estructura_control .)
    KW_STR          reduce using rule 7 (sentencia -> estructura_control .)
    IF              reduce using rule 7 (sentencia -> estructura_control .)
    FOR             reduce using rule 7 (sentencia -> estructura_control .)
    WHILE           reduce using rule 7 (sentencia -> estructura_control .)
    NUMBER          reduce using rule 7 (sentencia -> estructura_control .)
    LPAREN          reduce using rule 7 (sentencia -> estructura_control .)
    MINUS           reduce using rule 7 (sentencia -> estructura_control .)


state 10

    (8) sentencia -> kw_clg .

    RBRACE          reduce using rule 8 (sentencia -> kw_clg .)
    KW_UNMUTABLE    reduce using rule 8 (sentencia -> kw_clg .)
    ID              reduce using rule 8 (sentencia -> kw_clg .)
    FCT             reduce using rule 8 (sentencia -> kw_clg .)
    CLG             reduce using rule 8 (sentencia -> kw_clg .)
    SCN             reduce using rule 8 (sentencia -> kw_clg .)
    RETURN          reduce using rule 8 (sentencia -> kw_clg .)
    KW_ENT          reduce using rule 8 (sentencia -> kw_clg .)
    KW_FLT          reduce using rule 8 (sentencia -> kw_clg .)
    KW_LG           reduce using rule 8 (sentencia -> kw_clg .)
    KW_STR          reduce using rule 8 (sentencia -> kw_clg .)
    IF              reduce using rule 8 (sentencia -> kw_clg .)
    FOR             reduce using rule 8 (sentencia -> kw_clg .)
    WHILE           reduce using rule 8 (sentencia -> kw_clg .)
    NUMBER          reduce using rule 8 (sentencia -> kw_clg .)
    LPAREN          reduce using rule 8 (sentencia -> kw_clg .)
    MINUS           reduce using rule 8 (sentencia -> kw_clg .)


state 11

    (9) sentencia -> expresion .

    RBRACE          reduce using rule 9 (sentencia -> expresion .)
    KW_UNMUTABLE    reduce using rule 9 (sentencia -> expresion .)
    ID              reduce using rule 9 (sentencia -> expresion .)
    FCT             reduce using rule 9 (sentencia -> expresion .)
    CLG             reduce using rule 9 (sentencia -> expresion .)
    SCN             reduce using rule 9 (sentencia -> expresion .)
    RETURN          reduce using rule 9 (sentencia -> expresion .)
    KW_ENT          reduce using rule 9 (sentencia -> expresion .)
    KW_FLT          reduce using rule 9 (sentencia -> expresion .)
    KW_LG           reduce using rule 9 (sentencia -> expresion .)
    KW_STR          reduce using rule 9 (sentencia -> expresion .)
    IF              reduce using rule 9 (sentencia -> expresion .)
    FOR             reduce using rule 9 (sentencia -> expresion .)
    WHILE           reduce using rule 9 (sentencia -> expresion .)
    NUMBER          reduce using rule 9 (sentencia -> expresion .)
    LPAREN          reduce using rule 9 (sentencia -> expresion .)
    MINUS           reduce using rule 9 (sentencia -> expresion .)


state 12

    (10) sentencia -> retorno .
    (30) expresion -> retorno .

  ! reduce/reduce conflict for RBRACE resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for KW_UNMUTABLE resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for ID resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for FCT resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for CLG resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for SCN resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for RETURN resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for KW_ENT resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for KW_FLT resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for KW_LG resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for KW_STR resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for IF resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for FOR resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for WHILE resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for NUMBER resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for LPAREN resolved using rule 10 (sentencia -> retorno .)
  ! reduce/reduce conflict for MINUS resolved using rule 10 (sentencia -> retorno .)
    RBRACE          reduce using rule 10 (sentencia -> retorno .)
    KW_UNMUTABLE    reduce using rule 10 (sentencia -> retorno .)
    ID              reduce using rule 10 (sentencia -> retorno .)
    FCT             reduce using rule 10 (sentencia -> retorno .)
    CLG             reduce using rule 10 (sentencia -> retorno .)
    SCN             reduce using rule 10 (sentencia -> retorno .)
    RETURN          reduce using rule 10 (sentencia -> retorno .)
    KW_ENT          reduce using rule 10 (sentencia -> retorno .)
    KW_FLT          reduce using rule 10 (sentencia -> retorno .)
    KW_LG           reduce using rule 10 (sentencia -> retorno .)
    KW_STR          reduce using rule 10 (sentencia -> retorno .)
    IF              reduce using rule 10 (sentencia -> retorno .)
    FOR             reduce using rule 10 (sentencia -> retorno .)
    WHILE           reduce using rule 10 (sentencia -> retorno .)
    NUMBER          reduce using rule 10 (sentencia -> retorno .)
    LPAREN          reduce using rule 10 (sentencia -> retorno .)
    MINUS           reduce using rule 10 (sentencia -> retorno .)

  ! RBRACE          [ reduce using rule 30 (expresion -> retorno .) ]
  ! KW_UNMUTABLE    [ reduce using rule 30 (expresion -> retorno .) ]
  ! ID              [ reduce using rule 30 (expresion -> retorno .) ]
  ! FCT             [ reduce using rule 30 (expresion -> retorno .) ]
  ! CLG             [ reduce using rule 30 (expresion -> retorno .) ]
  ! SCN             [ reduce using rule 30 (expresion -> retorno .) ]
  ! RETURN          [ reduce using rule 30 (expresion -> retorno .) ]
  ! KW_ENT          [ reduce using rule 30 (expresion -> retorno .) ]
  ! KW_FLT          [ reduce using rule 30 (expresion -> retorno .) ]
  ! KW_LG           [ reduce using rule 30 (expresion -> retorno .) ]
  ! KW_STR          [ reduce using rule 30 (expresion -> retorno .) ]
  ! IF              [ reduce using rule 30 (expresion -> retorno .) ]
  ! FOR             [ reduce using rule 30 (expresion -> retorno .) ]
  ! WHILE           [ reduce using rule 30 (expresion -> retorno .) ]
  ! NUMBER          [ reduce using rule 30 (expresion -> retorno .) ]
  ! LPAREN          [ reduce using rule 30 (expresion -> retorno .) ]
  ! MINUS           [ reduce using rule 30 (expresion -> retorno .) ]


state 13

    (22) declaracion -> KW_UNMUTABLE . tipo_obligatorio ID ASSIGN expresion SEMI
    (24) declaracion -> KW_UNMUTABLE . tipo_obligatorio ID SEMI
    (14) tipo_obligatorio -> . KW_ENT
    (15) tipo_obligatorio -> . KW_FLT
    (16) tipo_obligatorio -> . KW_LG
    (17) tipo_obligatorio -> . KW_STR

    KW_ENT          shift and go to state 26
    KW_FLT          shift and go to state 27
    KW_LG           shift and go to state 28
    KW_STR          shift and go to state 29

    tipo_obligatorio               shift and go to state 37

state 14

    (23) declaracion -> tipo_obligatorio . ID ASSIGN expresion SEMI
    (25) declaracion -> tipo_obligatorio . ID SEMI
